--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 .header > #imageatr > img {
     width: 20%;
     margin-bottom: 0%;
-    margin-left: 5%;
+    margin-left: 0%;
     background-color: rgba(10%, 10%, 10%, 0.8);
     border-radius: 50%;
     box-shadow: 0 0 10px rgba(0%, 0%, 0%, 0.9);
